ng: fix user menu alignement

--- a/www/stylesheets/app.css
+++ b/www/stylesheets/app.css
@@ -26,27 +26,15 @@ body {
 }
 
 .avatar-icon {
-	width: 25px;
-	height: 25px;
+	width: 20px;
+	height: 20px;
 	margin-left: 12px;
-}
-
-.glyphicon-github:before {
-    display: inline-block;
-	width: 25px;
-	height: 25px;
-    background-image: url('/images/gitHub-mark-32-light.png');
-    background-size: 14px 14px;
-	content: "";
+	vertical-align: bottom;
 }
 
 /*
  * Notifications
  */
-
-.nav > .glyphicon-bell {
-	margin-top: 6px;
-}
 
 .notifications {
 	min-width: 350px;
